examples/errors/11_expression_is_not_allowed/layout.tml
#use <definitions.tmd>

<Window width={DynamicInteger min: 0, max: 1920}>
    <Text value="Hello, World!" font_size=14 wrap=NoWrap/>
</Window>